# physray_mp_sdk

./: .gitattributes  CMakeLists.txt  CMakeRC.cmake  LICENSE  README.md  build-android.cmd  build-android.sh  build-linux.sh  build-win64.cmd
sample/src/: CMakeLists.txt
sample/src/android/: .gitattributes
sample/src/android/hub/: README.md  clean.bat  clean.sh  compile.bat  compile.sh  gradlew  launch.py  settings.gradle
sample/src/android/hub/app/: build.gradle
sample/src/android/hub/app/keystores/: upload.jks
sample/src/android/hub/gradle/wrapper/: gradle-wrapper.properties
sample/src/asset-source/: README.md  animated-camera-light.glb
sample/src/asset-source/carafe/: README.md  carafe.gltf
sample/src/asset-source/garage-4.0a/: Garage_Enviorment.gltf  gen-assets.cmd  gen-assets.py  skybox-ibl-irradiance-astc-12x12.ktx2  skybox-ibl-reflection-astc-12x12.ktx2
sample/src/asset-source/garage-4.0a/addtional/: bumper-ibl-irradiance.dds  skybox-ibl-irradiance.dds
sample/src/asset-source/skybox1/: irradiance.dds
sample/src/asset-source/skybox2/: irradiance.dds
sample/src/asset/bvh-cache/: regen.py
sample/src/asset/model/: cat-eye-glasses.gltf  oppo-ring.glb
sample/src/asset/model/damaged-helmet/: damaged-helmet.gltf
sample/src/asset/model/skinned-test/: README.md
sample/src/asset/model/suzanne/: albedo-mipmapped-astc.ktx2  normal-astc.ktx2  orm-mipmapped-astc.ktx2
sample/src/asset/model/war-scenario/: livedemo.gltf  skybox-irradiance.ktx2  skybox-reflection.ktx2
sample/src/asset/model/war_Scenario/: War_Scenario_4x4.gltf  War_Scenario_non_merge.gltf
sample/src/asset/texture/skybox1/: irradiance-astc.ktx2
sample/src/asset/texture/skybox2/: irradiance-astc-12x12.ktx2  prefiltered-reflection-astc-4x4.ktx2
sample/src/common/: CMakeLists.txt  debug-scene-data.h  first-person-controller.cpp  first-person-controller.h  gltf-scene-reader.cpp  gltf-scene-reader.h  image-splicer.cpp  image-splicer.h  modelviewer.cpp  modelviewer.h  morphtargets.h  pathtracerconfig.h  pch.h  recorder.h  scene-asset.h  scene-utils.h  skinning.cpp  skinning.h  skybox.cpp  skybox.h  sphere.cpp  sphere.h  texture-cache.cpp  texture-cache.h  ui.cpp  ui.h  vkutils.cpp  vkutils.h
sample/src/common/animations/: channel.h  interpolator.h  key-value.h  quaternionf-cubic-spline-interpolator.h  quaternionf-linear-interpolator.h  root-transform-channel.cpp  root-transform-channel.h  simple-cubic-spline-interpolator.h  simple-linear-interpolator.h  step-interpolator.h  target-channel.h  timeline.cpp  timeline.h  transform-channel.cpp  transform-channel.h  weight-channel.cpp  weight-channel.h
sample/src/common/gltf/: accessor-reader.h  gltf-camera-builder.cpp  gltf-camera-builder.h  gltf-image-builder.cpp  gltf-image-builder.h  gltf-light-builder.cpp  gltf-light-builder.h  gltf-material-builder.cpp  gltf-material-builder.h  gltf-mesh-builder.cpp  gltf-mesh-builder.h  gltf-scene-asset-builder.cpp  gltf-scene-asset-builder.h  gltf-scene-builder.cpp  gltf-scene-builder.h  gltf.cpp  gltf.h  mesh-utils.h  physray-type-converter.cpp  physray-type-converter.h
sample/src/common/gltf/animations/: gltf-animation-builder.cpp  gltf-animation-builder.h  gltf-timeline-builder.cpp  gltf-timeline-builder.h  gltf-transform-channel-builder.cpp  gltf-transform-channel-builder.h  gltf-weight-channel-builder.cpp  gltf-weight-channel-builder.h
sample/src/cornell/: cornell.h  main.cpp
sample/src/desktop/: CMakeLists.txt  app.h
sample/src/garage/: garage.h  main.cpp
sample/src/ptdemo/: main.cpp  ptdemo.h
sample/src/ring/: main.cpp  ring.h
sample/src/rps/compute/: compute.cpp  compute.h
sample/src/rps/hello/: hello.cpp  hello.h
sample/src/rps/texture/: texture.cpp  texture.h
sample/src/rps/triangle/: triangle.cpp  triangle.h  triangle1.cpp  triangle1.h  triangle2.cpp  triangle2.h  triangle3.cpp  triangle3.h  triangle4.cpp  triangle4.h
sample/src/rt/blue_triangle/: blue_triangle.h  main.cpp
sample/src/rt/carousel/: carousel.h  main.cpp
sample/src/rt/common/: CMakeLists.txt  CMakeRC.cmake  camera.h  debug-scene-data.h  fatmesh.cpp  fatmesh.h  first-person-controller.cpp  first-person-controller.h  gltf-scene-reader.cpp  gltf-scene-reader.h  image-splicer.cpp  image-splicer.h  mesh-utils.h  modelviewer.cpp  modelviewer.h  morphtargets.cpp  morphtargets.h  pathtracerconfig.h  pch.cpp  pch.h  recorder.h  sbb.h  scene-asset.h  scene-graph.cpp  scene-graph.h  scene-utils.h  simpleApp.cpp  simpleApp.h  skinning.cpp  skinning.h  skybox.cpp  skybox.h  sphere.cpp  sphere.h  texture-cache.cpp  texture-cache.h  ui.cpp  ui.h
sample/src/rt/common/animations/: channel.h  interpolator.h  key-value.h  pch.h  quaternionf-cubic-spline-interpolator.h  quaternionf-linear-interpolator.h  root-transform-channel.cpp  root-transform-channel.h  simple-cubic-spline-interpolator.h  simple-linear-interpolator.h  step-interpolator.h  target-channel.h  timeline.cpp  timeline.h  transform-channel.cpp  transform-channel.h  weight-channel.cpp  weight-channel.h
sample/src/rt/common/gltf/: accessor-reader.h  gltf-camera-builder.cpp  gltf-camera-builder.h  gltf-image-builder.cpp  gltf-image-builder.h  gltf-light-builder.cpp  gltf-light-builder.h  gltf-material-builder.cpp  gltf-material-builder.h  gltf-mesh-builder.cpp  gltf-mesh-builder.h  gltf-scene-asset-builder.cpp  gltf-scene-asset-builder.h  gltf.cpp  gltf.h  mesh-utils.h  pch.h  physray-type-converter.cpp  physray-type-converter.h
sample/src/rt/common/shader/: morph-targets.comp  morph-targets.glsl  skinned-mesh.comp  skinned-mesh.glsl
sample/src/rt/cornell/: cornell.h  main.cpp
sample/src/rt/empty_app/: empty_app.h  main.cpp
sample/src/rt/garage/: garage.h  main.cpp
sample/src/rt/ptdemo/: main.cpp  ptdemo.h
sample/src/rt/refl/: main.cpp  refl.h
sample/src/rt/ring/: main.cpp  ring.h
sample/src/rt/shadow/: main.cpp  shadow.h
sample/src/rt/suzanne/: main.cpp  suzanne.h
sample/src/rt/triangle/: main.cpp  triangle.h
sample/src/rt/war/: culling.h  main.cpp  war.h
sample/src/shadow/: main.cpp  shadow.h
sample/src/suzanne/: main.cpp  suzanne.h
(+175 files in other folders)
